*Fix for Client to make Extensible based on Server Game. Add Test Ships. Add jGrasp Client Setup Documentation. Add .gitignore files.

--- a/SBA_Serv/kingofthebubble.cfg
+++ b/SBA_Serv/kingofthebubble.cfg
@@ -21,6 +21,7 @@ rungame = KingOfTheBubble
 radarname = true
 
 [KingOfTheBubble]
+initialpoints = 0
 stealminpoints = 10
 stealpercent = 35
 bubbleminradius = 50
