--- a/SBA_Serv/machine_test.cfg
+++ b/SBA_Serv/machine_test.cfg
@@ -24,8 +24,8 @@ number = 0
 
 [Game]
 sound = true
-autostart = false
-allowafterstart = false
+autostart = true
+allowafterstart = true
 allowreentry = true
 collisions = true
 roundtime = 120
