* Find The Middle = Target Practice.

--- a/SBA_Serv/findthemiddle.cfg
+++ b/SBA_Serv/findthemiddle.cfg
@@ -25,5 +25,7 @@ rungame = FindTheMiddle
 radarname = true
 
 [FindTheMiddle]
-objectiveradius = 300
-objectivetime = 10
+objectiveradii = [50, 150, 300]
+objectivepoints = [4, 2, 1]
+objectivetime = 3
+objectivevelocity = 5
