--- a/java_client_src/.classpath
+++ b/java_client_src/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="gson-2.2.jar">
+	<classpathentry kind="lib" path="../bin/gson-2.2.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/SpaceBattle/gson-2.2-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="http://google-gson.googlecode.com/svn/trunk/gson/docs/javadocs/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
