--- a/java_test_ship/.classpath
+++ b/java_test_ship/.classpath
@@ -2,11 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/SpaceBattle/gson-2.2.jar">
+	<classpathentry combineaccessrules="false" kind="src" path="/SpaceBattle"/>
+	<classpathentry kind="lib" path="../bin/gson-2.2.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/SpaceBattle/gson-2.2-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="http://google-gson.googlecode.com/svn/trunk/gson/docs/javadocs/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/SpaceBattle"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
