* Add Eclipse Documentation. (Resolves #11)

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ timezone: America/Vancouver
 baseurl: /SpaceBattleArena
 url: http://mikeware.github.io/SpaceBattleArena
 
+githuburl: https://www.github.com/Mikeware/SpaceBattleArena
+
 defaults:
   -
     scope:
