* Adds Nebulas which can slow ships down. (Resolves #10) Adds Polygonal Entities and Elliptical Entities. Consolidates properties for Nebulas, Planets, BlackHoles to PULL, MAJOR, MINOR. Moves Configuration of Planet/BlackHole Gravity Wells, and Nebula Drag to Config file. Adds Background object z-ordered Drawing to GUI.

--- a/SBA_Serv/findthemiddle.cfg
+++ b/SBA_Serv/findthemiddle.cfg
@@ -1,28 +1,26 @@
 [Server]
 disablecommands = WarpCommand,FirePhotonTorpedoCommand
 
+[Nebula]
+number = 1
+
 [Planet]
-number = 3
+number = 1
 
 [BlackHole]
 number = 1
 
 [Asteroid]
-number = 18
+number = 8
 
 [Game]
 sound = true
+rungame = FindTheMiddle
+radarname = true
 autostart = true
 allowafterstart = true
 allowreentry = true
 collisions = false
-roundtime = 120
-resetworldeachround = false
-disconnectplayersafterround = false
-tournament = false
-tournamentgroups = 4
-rungame = FindTheMiddle
-radarname = true
 
 [FindTheMiddle]
 objectiveradii = [50, 150, 300]
