* Added Server Documentation. (Resolves #5, Resolves #6) Switched to redcarpet for HTML rendering.

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,10 @@ url: http://mikeware.github.io/SpaceBattleArena
 
 githuburl: https://www.github.com/Mikeware/SpaceBattleArena
 
+markdown: redcarpet
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "strikethrough", "superscript", "with_toc_data"]
+
 defaults:
   -
     scope:
