* The Great Big Configuration Update (TGBCU):   * Server now can load ANY number of config files. (Resolves #38)   * Resolution can be auto-detected on values of '0'. (Resolves #39)   * World can now be relative to resolution with 'x'.   * Cleaned up the configuration groups - Tournament now its own group. (Resolves #22)

--- a/SBA_Serv/findthemiddle.cfg
+++ b/SBA_Serv/findthemiddle.cfg
@@ -1,5 +1,8 @@
+[World]
+collisions = false
+
 [Server]
-disablecommands = WarpCommand,FirePhotonTorpedoCommand
+disable_commands = WarpCommand,FireTorpedoCommand
 
 [Nebula]
 number = 1
@@ -14,16 +17,10 @@ number = 1
 number = 8
 
 [Game]
-sound = true
-rungame = FindTheMiddle
-radarname = true
-autostart = true
-allowafterstart = true
-allowreentry = true
-collisions = false
+game = FindTheMiddle
 
 [FindTheMiddle]
-objectiveradii = [50, 150, 300]
-objectivepoints = [4, 2, 1]
-objectivetime = 3
-objectivevelocity = 5
+objective_radii = [50, 150, 300]
+objective_points = [4, 2, 1]
+objective_time = 3
+objective_velocity = 5
