Initial Unit Test Scaffolding. Lots of work left to do, but this is at least a good snapshot.

--- a/SBA_Serv/test.cfg
+++ b/SBA_Serv/test.cfg
@@ -1,51 +1,63 @@
+########################################
+# Space Battle Arena - Test Config File
+########################################
+#
+# This file is used for the SBA Test Framework
+#
+########################################
+
+# You shouldn't override any of the Application, World, or Server settings for most tests.
+# It'd be nice for the tests to run in the same sized window always.
 [Application]
-horz_res = 800
-vert_res = 600
 fullscreen = false
+horz_res = 1024
+vert_res = 768
+sound = true
 showstats = true
+ship_images = 10
 
 [World]
-width = 800
-height = 600
+collisions = true
+width = 1024
+height = 768
+radar_include_name = true
 
 [Server]
-multipleconnections = true
-port = 2012
-maximages = 9
-
-[Planet]
-number = 1
-
-[BlackHole]
-number = 1
+port = 2015
+multiple_connections = true
+allow_re-entry = true
 
 [Asteroid]
 number = 0
 
+[Planet]
+number = 0
+range_min=112
+range_max=192
+pull_min=8
+pull_max=24
+
+[BlackHole]
+number = 0
+range_min=64
+range_max=208
+pull_min=52
+pull_max=72
+
+[Nebula]
+number = 0
+sizes=[(512,128),(384,256)]
+pull_min=1750
+pull_max=2500
+
 [Game]
-sound = true
-autostart = true
-allowafterstart = true
-allowreentry = true
-collisions = true
-roundtime = 0
-resetworldeachround = false
-disconnectplayersafterround = false
+game = BasicGame
+auto_start = true
+allow_after_start = true
+
+[Tournament]
 tournament = false
-tournamentgroups = 4
-rungame = BaubleHuntSCV
-radarname = true
-
-[BaubleHunt]
-initialbaubles = 10
-extrabaublesperplayer = 1
-deathpenalty = 0
-numtofinalround = 1
-timefornewbauble = 10
-baublesperspawn = 1
-
-[BaubleHuntSCV]
-bluebaubles = 0.6
-yellowbaubles = 0.3
-redbaubles = 0.1
-maxcarry = 5
+tournament_groups = 4
+round_time = 120
+reset_world_each_round = true
+disconnect_players_after_round = false
