* The Great Big Subgame Update (TGBSU):   * Completely overhauled the Subgame infrastructure to push common functions and scoring tracking to BasicGame.   * BasicGame handles score, best score, round maintenance, etc... (Resolves #24)   * Renamed all functions and organized based on primary functions.   * Cleaned up ship lifecycle functions.   * Added configuration properties to Game to allow for customized primary/secondary score tracking to automate leaderboards and advancement.   * Added default behavior to re-add ships to game and added config disconnect_on_death for old behavior. (Resolves #43)   * Added Survivor and CombatExercise Games. (Resolves #25)   * Added test cases for some basic games.   * Made exceptions in test cases fail test case.

--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -55,13 +55,21 @@ pull_min=1750
 pull_max=2500
 
 [Game]
-game = BasicGame
+game = Basic
 auto_start = true
 allow_after_start = true
+disconnect_on_death = false
+reset_score_on_death = false
+points_lost_on_death = 0
+points_initial = 0
+primary_victory_attr = score
+primary_victory_highest = true
+secondary_victory_attr = deaths
+secondary_victory_highest = false
 
 [Tournament]
 tournament = false
 tournament_groups = 4
-round_time = 120
+number_to_final_round = 1
+round_time = 180
 reset_world_each_round = true
-disconnect_players_after_round = false
