* Refreshed binaries for V1.0 Release May 11. * Rename Games. (BaubleHuntSCV -> BaubleHunt, BaubleHunt -> HungryHungryBaubles) * Add Barebones Competition Documentation. Added time alive counter in CombatExercise. Unified game config formats for advanced games. Split config from old BaubleHuntSCV and BaubleHunt.

--- a/SBA_Serv/game_kingofspace.cfg
+++ b/SBA_Serv/game_kingofspace.cfg
@@ -12,12 +12,12 @@ game = KingOfTheBubble
 points_initial = 100
 
 [KingOfTheBubble]
-stealminpoints = 20
-stealpercent = 50
-bubbleminradius = 50
-numbubbles = 0
-bubbleminpoints = 75
-bubblemaxpoints = 150
-bubblepointspeed = 200
-bubbletime = 0
-bubbletimevar = 0
+steal_points_min = 20
+steal_points_percent = 50
+bubble_radius_min = 50
+bubble_number_max = 0
+bubble_points_min = 75
+bubble_points_max = 150
+bubble_points_drain_speed = 200
+bubble_time_alive_min = 0
+bubble_time_alive_variance = 0
