--- a/SBA_Serv/game_kingofthebubble.cfg
+++ b/SBA_Serv/game_kingofthebubble.cfg
@@ -11,12 +11,12 @@ number = 25
 game = KingOfTheBubble
 
 [KingOfTheBubble]
-stealminpoints = 10
-stealpercent = 35
-bubbleminradius = 50
-numbubbles = 6
-bubbleminpoints = 75
-bubblemaxpoints = 150
-bubblepointspeed = 2
-bubbletime = 60
-bubbletimevar = 30
+steal_points_min = 10
+steal_points_percent = 35
+bubble_radius_min = 50
+bubble_number_max = 6
+bubble_points_min = 75
+bubble_points_max = 150
+bubble_points_drain_speed = 2
+bubble_time_alive_min = 60
+bubble_time_alive_variance = 30
