--- a/SBA_Serv/game_baublehunt.cfg
+++ b/SBA_Serv/game_baublehunt.cfg
@@ -1,12 +1,30 @@
+[Planet]
+number = 1
+
+[BlackHole]
+number = 1
+
 [Asteroid]
-number = 12
+number = 4
 
 [Game]
 game = BaubleHunt
-points_lost_on_death = 8
+secondary_victory_attr = totalcollected
 
 [BaubleHunt]
-initialbaubles = 18
-extrabaublesperplayer = 4
-timefornewbauble = 4
-baublesperspawn = 2
+bauble_initial = 10
+bauble_per_player = 1
+bauble_timer = 10
+bauble_timer_spawns = 1
+
+ship_cargo_size = 5
+
+bauble_percent_blue = 0.6
+bauble_points_blue = 1
+
+bauble_percent_yellow = 0.3
+bauble_points_yellow = 3
+
+bauble_percent_red = 0.1
+bauble_points_red = 5
+
