--- a/SBA_Serv/radarworld.cfg
+++ b/SBA_Serv/radarworld.cfg
@@ -34,18 +34,18 @@ resetworldeachround = false
 disconnectplayersafterround = false
 tournament = false
 tournamentgroups = 4
-rungame = BaubleHuntSCV
+rungame = BaubleHunt
 radarname = true
 
-[BaubleHunt]
-initialbaubles = 25
-extrabaublesperplayer = 1
+[HungryHungryBaubles]
+bauble_initial = 25
+bauble_per_player = 1
 deathpenalty = 0
 numtofinalround = 1
-timefornewbauble = 0
-baublesperspawn = 0
+bauble_timer = 0
+bauble_timer_spawns = 0
 
-[BaubleHuntSCV]
+[BaubleHunt]
 bluebaubles = 0.6
 yellowbaubles = 0.3
 redbaubles = 0.1
