Add Find the Middle Lesson.

--- a/SBA_Serv/basicgame_findthemiddle.cfg
+++ b/SBA_Serv/basicgame_findthemiddle.cfg
@@ -2,7 +2,7 @@
 collisions = false
 
 [Server]
-disable_commands = WarpCommand,FireTorpedoCommand
+disable_commands = WarpCommand,FireTorpedoCommand,AllStopCommand
 
 [Nebula]
 number = 1
