* Additional Graphics Added (contributed by Jeff).

--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -18,7 +18,7 @@ horz_res = 800
 vert_res = 600
 sound = true
 showstats = true
-ship_images = 10
+ship_images = 11
 
 [World]
 collisions = true
@@ -50,7 +50,7 @@ pull_max=72
 
 [Nebula]
 number = 1
-sizes=[(512,128),(384,256)]
+sizes=[(512,128),(512,144),(512,256),(384,144),(384,256)]
 pull_min=1750
 pull_max=2500
 
