Add disconnect_on_idle to toggle the auto-kick feature.

--- a/SBA_Serv/Tests/defaulttest.cfg
+++ b/SBA_Serv/Tests/defaulttest.cfg
@@ -26,6 +26,7 @@ radar_include_name = true
 port = 2015
 multiple_connections = true
 allow_re-entry = true
+disconnect_on_idle = true
 
 [Asteroid]
 number = 0
