--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -30,6 +30,7 @@ radar_include_name = true
 port = 2012
 multiple_connections = true
 allow_re-entry = true
+disconnect_on_idle = true
 
 [Asteroid]
 number = 2
