Update Survivor game to be points for travelling to encourage movement.

--- a/SBA_Serv/basicgame_survivor.cfg
+++ b/SBA_Serv/basicgame_survivor.cfg
@@ -17,3 +17,6 @@ primary_victory_attr = bestscore
 primary_victory_highest = true
 secondary_victory_attr = score
 secondary_victory_highest = true
+
+[Survivor]
+minimum_velocity = 15
