--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -49,6 +49,13 @@ range_max=208
 pull_min=52
 pull_max=72
 
+[Star]
+number = 1
+range_min=96
+range_max=224
+pull_min=12
+pull_max=48
+
 [Nebula]
 number = 1
 sizes=[(512,128),(512,144),(512,256),(384,144),(384,256)]
