* Add Discovery Quest GameInfo to client. * Add Discovery Quest Scanning Points. * Change world object listener registration for object initialization in subgames. Make Ship HUD appear always when tracking. Pass Tracking Ship to subgame draw methods.

--- a/SBA_Serv/game_discoveryquest.cfg
+++ b/SBA_Serv/game_discoveryquest.cfg
@@ -21,3 +21,11 @@ number = 10
 game = DiscoveryQuest
 
 [DiscoveryQuest]
+outpost_number = 4
+points_asteroid = 2
+points_planet = 2
+points_blackhole = 3
+points_nebula = 1
+points_star = 3
+points_outpost = 2
+points_ship = 6
