Initial Mission Infrastructure for Discovery Quest.

--- a/SBA_Serv/game_discoveryquest.cfg
+++ b/SBA_Serv/game_discoveryquest.cfg
@@ -29,3 +29,8 @@ points_nebula = 1
 points_star = 3
 points_outpost = 2
 points_ship = 6
+mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost,Ship
+mission_num_min = 1
+mission_num_max = 3
+mission_bonus_multiplier = 3.0
+scan_time = 3.5
