--- a/SBA_Serv/game_discoveryquest.cfg
+++ b/SBA_Serv/game_discoveryquest.cfg
@@ -6,19 +6,21 @@ height = x2
 number = 3
 
 [BlackHole]
-number = 1
+number = 2
 
 [Star]
 number = 2
 
 [Nebula]
-number = 2
+number = 3
 
 [Asteroid]
-number = 10
+number = 20
 
 [Game]
 game = DiscoveryQuest
+secondary_victory_attr = buffervalue
+secondary_victory_highest = true
 
 [DiscoveryQuest]
 outpost_number = 4
