* The Secret Dragon Update (TSDU):   * Added 'Dragon' - hungry for ships.   * Abstracted 'Influential' for Planets and Dragon.   * Add test cases for Star, Black Hole, and Dragon destruction.   * Fixed miss spots with player requesting radar info to game.   * Redid and added all sounds to be from freesound.org   * Fixed bug with shield display for new Ship HUD.

--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -35,6 +35,15 @@ disconnect_on_idle = true
 [Asteroid]
 number = 2
 
+[Dragon]
+number = 0
+range_min=64
+range_max=160
+attack_speed_min = 8
+attack_speed_max = 20
+health_min=300
+health_max=600
+
 [Planet]
 number = 1
 range_min=112
