--- a/SBA_Serv/game_discoveryquest.cfg
+++ b/SBA_Serv/game_discoveryquest.cfg
@@ -17,23 +17,27 @@ number = 3
 [Asteroid]
 number = 20
 
+[Dragon]
+number = 2
+
 [Game]
 game = DiscoveryQuest
 secondary_victory_attr = buffervalue
 secondary_victory_highest = true
 
 [DiscoveryQuest]
-outpost_number = 4
+outpost_number = 8
+scan_time = 3.5
+scan_range = 150
+mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost,Dragon
+mission_num_min = 1
+mission_num_max = 3
+mission_bonus_multiplier = 3.0
 points_asteroid = 2
 points_planet = 2
 points_blackhole = 3
 points_nebula = 1
 points_star = 3
 points_outpost = 2
-points_ship = 6
-mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost,Ship
-mission_num_min = 1
-mission_num_max = 3
-mission_bonus_multiplier = 3.0
-scan_time = 3.5
-scan_range = 150
+points_dragon = 6
+points_ship = 4
