* Add Hungry Hungry Bauble Test Cases. First step in Test Case Error Handling. (see #20) Add some test cases for WorldMath. Add new 'aligninstances' helper for testing collisions. (applied to Bauble Hunt and Hungry Hungry Baubles)

--- a/SBA_Serv/Tests/defaulttest.cfg
+++ b/SBA_Serv/Tests/defaulttest.cfg
@@ -31,6 +31,15 @@ disconnect_on_idle = true
 [Asteroid]
 number = 0
 
+[Dragon]
+number = 0
+range_min=64
+range_max=160
+attack_speed_min = 8
+attack_speed_max = 20
+health_min=300
+health_max=600
+
 [Planet]
 number = 0
 range_min=112
@@ -44,6 +53,13 @@ range_min=64
 range_max=208
 pull_min=52
 pull_max=72
+
+[Star]
+number = 0
+range_min=96
+range_max=224
+pull_min=12
+pull_max=48
 
 [Nebula]
 number = 0
