--- a/java_test_ship/.classpath
+++ b/java_test_ship/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/SpaceBattle"/>
-	<classpathentry kind="lib" path="../bin/gson-2.2.jar">
+	<classpathentry kind="lib" path="../gson-2.2.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://google-gson.googlecode.com/svn/trunk/gson/docs/javadocs/"/>
 		</attributes>
