* Initial implementation for Spawn Manager (for #82, #83). Plan for revision already, just want baseline checked-in.

--- a/SBA_Serv/Tests/test_asteroidminer.cfg
+++ b/SBA_Serv/Tests/test_asteroidminer.cfg
@@ -4,8 +4,16 @@ number = 0
 [Game]
 game = AsteroidMiner
 
+[Spawn]
+entity_types = Asteroid
+keep_around = false
+time_num = 1
+time_min = 5
+time_max = 10
+on_player_num = 1
+on_player_start = true
+on_player_respawn = false
+
 [AsteroidMiner]
 points_torpedo = 2
 points_ship = 1
-spawn_time = 10
-spawn_number = 1
