--- a/SBA_Serv/basicgame_asteroid.cfg
+++ b/SBA_Serv/basicgame_asteroid.cfg
@@ -1,11 +1,19 @@
 [Asteroid]
-number = 20
+number = 16
 
 [Game]
 game = AsteroidMiner
 
+[Spawn]
+entity_types = Asteroid
+keep_around = true
+time_num = 2
+time_min = 10
+time_max = 20
+on_player_num = 1
+on_player_start = true
+on_player_respawn = false
+
 [AsteroidMiner]
 points_torpedo = 2
 points_ship = 1
-spawn_time = 10
-spawn_number = 1
