--- a/SBA_Serv/basicgame_findthemiddle.cfg
+++ b/SBA_Serv/basicgame_findthemiddle.cfg
@@ -21,7 +21,7 @@ game = FindTheMiddle
 reset_score_on_death = false
 
 [FindTheMiddle]
-objective_radii = [50, 150, 300]
-objective_points = [4, 2, 1]
+objective_radii = 50, 150, 300
+objective_points = 4, 2, 1
 objective_time = 3
 objective_velocity = 5
