--- a/SBA_Serv/game_discoveryquest.cfg
+++ b/SBA_Serv/game_discoveryquest.cfg
@@ -15,7 +15,7 @@ number = 2
 number = 3
 
 [Asteroid]
-number = 20
+number = 10
 
 [Dragon]
 number = 2
@@ -25,11 +25,21 @@ game = DiscoveryQuest
 secondary_victory_attr = buffervalue
 secondary_victory_highest = true
 
+[Spawn]
+entity_types = Asteroid,Dragon
+keep_around = false,true
+time_num = 1,0
+time_min = 15,0
+time_max = 60,0
+on_player_num = 1,0
+on_player_start = true,false
+on_player_respawn = false,false
+
 [DiscoveryQuest]
 outpost_number = 8
 scan_time = 3.5
 scan_range = 150
-mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost,Dragon
+mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost
 mission_num_min = 1
 mission_num_max = 3
 mission_bonus_multiplier = 3.0
