* Spawn Manager v2. (Resolves #82, Resolves #83). Moved properties to the object sections. Added basic test cases for Spawn Manager. Can configure for custom objects in games, but need more from #85 before compelte.

--- a/SBA_Serv/Tests/test_asteroidminer.cfg
+++ b/SBA_Serv/Tests/test_asteroidminer.cfg
@@ -1,18 +1,14 @@
 [Asteroid]
 number = 0
+spawn_time_num = 1
+spawn_time_min = 5
+spawn_time_max = 10
+spawn_on_player_num = 1
+spawn_on_player_start = true
+spawn_on_player_respawn = false
 
 [Game]
 game = AsteroidMiner
-
-[Spawn]
-entity_types = Asteroid
-keep_around = false
-time_num = 1
-time_min = 5
-time_max = 10
-on_player_num = 1
-on_player_start = true
-on_player_respawn = false
 
 [AsteroidMiner]
 points_torpedo = 2
