--- a/SBA_Serv/basicgame_asteroid.cfg
+++ b/SBA_Serv/basicgame_asteroid.cfg
@@ -1,18 +1,15 @@
 [Asteroid]
 number = 16
+spawn_keep_min = 16
+spawn_time_num = 2
+spawn_time_min = 10
+spawn_time_max = 20
+spawn_on_player_num = 1
+spawn_on_player_start = true
+spawn_on_player_respawn = false
 
 [Game]
 game = AsteroidMiner
-
-[Spawn]
-entity_types = Asteroid
-keep_around = true
-time_num = 2
-time_min = 10
-time_max = 20
-on_player_num = 1
-on_player_start = true
-on_player_respawn = false
 
 [AsteroidMiner]
 points_torpedo = 2
