--- a/SBA_Serv/game_discoveryquest.cfg
+++ b/SBA_Serv/game_discoveryquest.cfg
@@ -16,27 +16,32 @@ number = 3
 
 [Asteroid]
 number = 10
+spawn_time_num = 1
+spawn_time_min = 15
+spawn_time_max = 60
+spawn_on_player_num = 1
+spawn_on_player_start = true
+spawn_on_player_respawn = false
 
 [Dragon]
 number = 2
+spawn_keep_max = 2
+spawn_time_num = 1
+spawn_time_min = 20
+spawn_time_max = 30
+
+#[Outpost]
+#number = 6
+#spawn_keep_min = 6
 
 [Game]
 game = DiscoveryQuest
 secondary_victory_attr = buffervalue
 secondary_victory_highest = true
 
-[Spawn]
-entity_types = Asteroid,Dragon
-keep_around = false,true
-time_num = 1,0
-time_min = 15,0
-time_max = 60,0
-on_player_num = 1,0
-on_player_start = true,false
-on_player_respawn = false,false
-
 [DiscoveryQuest]
-outpost_number = 8
+# TODO: REMOVE
+outpost_number = 6
 scan_time = 3.5
 scan_range = 150
 mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost
