* Removed World Generator/Configured World. Game is owner of World Creation now through Spawn Manager. Allows for lifecycle management of custom game objects. (Fixes #85) Also cleans up the World/Game start issue. (Fixes #20) Configurable outpost spawn distance for Discovery Quest. (Fixes #87)
**Build Number: 1106**

--- a/SBA_Serv/Tests/defaulttest.cfg
+++ b/SBA_Serv/Tests/defaulttest.cfg
@@ -30,18 +30,28 @@ disconnect_on_idle = true
 
 [Asteroid]
 number = 0
+buffer_object = 60
+buffer_edge = 30
 
 [Dragon]
 number = 0
+buffer_object = 128
+buffer_edge = 16
 range_min=64
 range_max=160
 attack_speed_min = 8
 attack_speed_max = 20
+attack_time_min = 1.3
+attack_time_max = 1.5
+attack_amount_min = 20
+attack_amount_max = 22
 health_min=300
 health_max=600
 
 [Planet]
 number = 0
+buffer_object = 200
+buffer_edge = 100
 range_min=112
 range_max=192
 pull_min=8
@@ -49,10 +59,13 @@ pull_max=24
 
 [BlackHole]
 number = 0
+buffer_object = 250
+buffer_edge = 100
 range_min=64
 range_max=208
 pull_min=52
 pull_max=72
+crush_time = 5.0
 
 [Star]
 number = 0
@@ -60,9 +73,12 @@ range_min=96
 range_max=224
 pull_min=12
 pull_max=48
+dmg_mod = 0.0
 
 [Nebula]
 number = 0
+buffer_object = 30
+buffer_edge = 128
 sizes=[(512,128),(384,256)]
 pull_min=1750
 pull_max=2500
