--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -34,18 +34,28 @@ disconnect_on_idle = true
 
 [Asteroid]
 number = 2
+buffer_object = 60
+buffer_edge = 30
 
 [Dragon]
 number = 0
+buffer_object = 128
+buffer_edge = 16
 range_min=64
 range_max=160
 attack_speed_min = 8
 attack_speed_max = 20
+attack_time_min = 1.0
+attack_time_max = 2.0
+attack_amount_min = 15
+attack_amount_max = 25
 health_min=300
 health_max=600
 
 [Planet]
 number = 1
+buffer_object = 200
+buffer_edge = 100
 range_min=112
 range_max=192
 pull_min=8
@@ -53,20 +63,28 @@ pull_max=24
 
 [BlackHole]
 number = 1
+buffer_object = 250
+buffer_edge = 100
 range_min=64
 range_max=208
 pull_min=52
 pull_max=72
+crush_time = 5.0
 
 [Star]
 number = 1
+buffer_object = 250
+buffer_edge = 100
 range_min=96
 range_max=224
 pull_min=12
 pull_max=48
+dmg_mod = 0.0
 
 [Nebula]
 number = 1
+buffer_object = 30
+buffer_edge = 128
 sizes=[(512,128),(512,144),(512,256),(384,144),(384,256)]
 pull_min=1750
 pull_max=2500
