--- a/SBA_Serv/game_discoveryquest.cfg
+++ b/SBA_Serv/game_discoveryquest.cfg
@@ -25,14 +25,18 @@ spawn_on_player_respawn = false
 
 [Dragon]
 number = 2
+attack_amount_min = 25
+attack_amount_max = 50
 spawn_keep_max = 2
 spawn_time_num = 1
 spawn_time_min = 20
 spawn_time_max = 30
 
-#[Outpost]
-#number = 6
-#spawn_keep_min = 6
+[Outpost]
+number = 6
+buffer_object = 80
+buffer_edge = 30
+spawn_keep_min = 6
 
 [Game]
 game = DiscoveryQuest
@@ -40,10 +44,9 @@ secondary_victory_attr = buffervalue
 secondary_victory_highest = true
 
 [DiscoveryQuest]
-# TODO: REMOVE
-outpost_number = 6
 scan_time = 3.5
 scan_range = 150
+ship_spawn_dist = 105
 mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost
 mission_num_min = 1
 mission_num_max = 3
