--- a/SBA_Serv/game_hungryhungrybaubles.cfg
+++ b/SBA_Serv/game_hungryhungrybaubles.cfg
@@ -1,15 +1,24 @@
 [Asteroid]
 number = 12
 
+[Bauble]
+number = 18
+buffer_object = 80
+buffer_edge = 30
+spawn_keep_min = 12
+spawn_keep_max = 48
+spawn_on_player_num = 4
+spawn_on_player_start = true
+spawn_on_player_respawn = false
+spawn_time_num = 2
+spawn_time_min = 10
+spawn_time_max = 25
+
 [Game]
 game = HungryHungryBaubles
 points_lost_on_death = 4
 
 [HungryHungryBaubles]
-bauble_initial = 18
-bauble_per_player = 4
-bauble_timer = 4
-bauble_timer_spawns = 2
 bauble_points_blue = 1
 bauble_points_gold = 3
 bauble_points_extra = 2
