* Add King of the Bubble to Spawn Manager system. Add King of the Bubble Test Cases. (Resolves #89) Provide options for Time To Live. (Resolves #86)

--- a/SBA_Serv/game_kingofspace.cfg
+++ b/SBA_Serv/game_kingofspace.cfg
@@ -7,6 +7,15 @@ number = 1
 [Asteroid]
 number = 3
 
+[Bubble]
+number = 0
+buffer_object = 100
+buffer_edge = 30
+spawn_alive_time_min = 1
+spawn_alive_time_max = 1
+points_min = 75
+points_max = 150
+
 [Game]
 game = KingOfTheBubble
 points_initial = 100
@@ -15,9 +24,4 @@ points_initial = 100
 steal_points_min = 20
 steal_points_percent = 50
 bubble_radius_min = 50
-bubble_number_max = 0
-bubble_points_min = 75
-bubble_points_max = 150
 bubble_points_drain_speed = 200
-bubble_time_alive_min = 0
-bubble_time_alive_variance = 0
