--- a/SBA_Serv/game_kingofthebubble.cfg
+++ b/SBA_Serv/game_kingofthebubble.cfg
@@ -1,11 +1,22 @@
 [Planet]
-number = 5
+number = 1
 
 [BlackHole]
-number = 2
+number = 1
 
 [Asteroid]
-number = 25
+number = 10
+
+[Bubble]
+number = 4
+buffer_object = 100
+buffer_edge = 30
+spawn_keep_min = 4
+spawn_keep_max = 6
+spawn_alive_time_min = 90
+spawn_alive_time_max = 120
+points_min = 75
+points_max = 150
 
 [Game]
 game = KingOfTheBubble
@@ -14,9 +25,4 @@ game = KingOfTheBubble
 steal_points_min = 10
 steal_points_percent = 35
 bubble_radius_min = 50
-bubble_number_max = 6
-bubble_points_min = 75
-bubble_points_max = 150
 bubble_points_drain_speed = 2
-bubble_time_alive_min = 60
-bubble_time_alive_variance = 30
