* Abstract Tournaments to own Class.

--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -104,7 +104,8 @@ secondary_victory_highest = false
 
 [Tournament]
 tournament = false
-tournament_groups = 4
+manager = BasicTournament
+groups = 4
 number_to_final_round = 1
 round_time = 180
 reset_world_each_round = true
