Provide configuration option in Bauble Hunt to turn off respawning collected baubles. (Requested by Zach)

--- a/SBA_Serv/Tests/test_baublehunt.cfg
+++ b/SBA_Serv/Tests/test_baublehunt.cfg
@@ -16,6 +16,7 @@ secondary_victory_attr = totalcollected
 
 [BaubleHunt]
 ship_cargo_size = 5
+respawn_bauble_on_collect = true
 
 bauble_percent_blue = 0.6
 bauble_points_blue = 1
