--- a/SBA_Serv/Tests/test_tournament_wild_ties.cfg
+++ b/SBA_Serv/Tests/test_tournament_wild_ties.cfg
@@ -7,9 +7,10 @@ allow_after_start = false
 
 [Tournament]
 tournament = true
+round_time = 15
 manager = WildTournament
 
 [Wildcard]
 play_round = false
-number = 3
+number = 1
 take_ties = true
