--- a/SBA_Serv/Tests/test_discovery_quest2.cfg
+++ b/SBA_Serv/Tests/test_discovery_quest2.cfg
@@ -1,42 +1,8 @@
-[World]
-width = x2
-height = x2
-
-[Planet]
-number = 3
-
-[BlackHole]
-number = 2
-
-[Star]
-number = 2
-
-[Nebula]
-number = 3
-
-[Asteroid]
-number = 10
-spawn_time_num = 1
-spawn_time_min = 15
-spawn_time_max = 60
-spawn_on_player_num = 1
-spawn_on_player_start = true
-spawn_on_player_respawn = false
-
-[Dragon]
-number = 2
-attack_amount_min = 25
-attack_amount_max = 50
-spawn_keep_max = 2
-spawn_time_num = 1
-spawn_time_min = 20
-spawn_time_max = 30
-
 [Outpost]
-number = 6
+number = 1
 buffer_object = 80
 buffer_edge = 30
-spawn_keep_min = 6
+spawn_keep_min = 1
 
 [Game]
 game = DiscoveryQuest
@@ -47,7 +13,7 @@ secondary_victory_highest = true
 scan_time = 3.5
 scan_range = 150
 ship_spawn_dist = 105
-disable_warp_in_nebula = true
+disable_warp_in_nebula = false
 mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost
 mission_num_min = 1
 mission_num_max = 3
