Add Worm Holes + Torpedo Physics

--- a/SBA_Serv/Tests/defaulttest.cfg
+++ b/SBA_Serv/Tests/defaulttest.cfg
@@ -13,6 +13,7 @@ fullscreen = false
 horz_res = 1024
 vert_res = 768
 sound = true
+showip = false
 showstats = true
 ship_images = 10
 
@@ -56,6 +57,7 @@ range_min=112
 range_max=192
 pull_min=8
 pull_max=24
+pull_torpedo = False
 
 [BlackHole]
 number = 0
@@ -82,6 +84,14 @@ buffer_edge = 128
 sizes=[(512,128),(384,256)]
 pull_min=1750
 pull_max=2500
+
+[WormHole]
+number = 0
+buffer_object = 200
+buffer_edge = 64
+types=[1]
+buffer_exit_object = 128
+buffer_exit_edge = 64
 
 [Game]
 game = Basic
