Update Game Documentation for Spawn Manager Changes (forgot before) Add Worm Holes to Discovery Quest Config Fix Link to Spawn Manager

--- a/SBA_Serv/game_discoveryquest.cfg
+++ b/SBA_Serv/game_discoveryquest.cfg
@@ -32,6 +32,9 @@ spawn_time_num = 1
 spawn_time_min = 20
 spawn_time_max = 30
 
+[WormHole]
+number = 3
+
 [Outpost]
 number = 6
 buffer_object = 80
@@ -48,7 +51,7 @@ scan_time = 3.5
 scan_range = 150
 ship_spawn_dist = 105
 disable_warp_in_nebula = true
-mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost
+mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost,WormHole
 mission_num_min = 1
 mission_num_max = 3
 mission_bonus_multiplier = 3.0
@@ -59,4 +62,5 @@ points_nebula = 1
 points_star = 3
 points_outpost = 2
 points_dragon = 6
+points_wormhole = 2
 points_ship = 4
