Added Unit Tests for Space Mines Improved Space Mine Debugging Info Added Ability to Spawn Space Mines in GUI and config Fixed issue with Space Mines not exploding if remaining on them

--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -53,6 +53,20 @@ attack_amount_max = 25
 health_min=300
 health_max=600
 
+[SpaceMine]
+number = 0
+buffer_object = 128
+buffer_edge = 16
+delay_min = 8.0
+delay_max = 16.0
+types=[1,2,3]
+direction_min = 0
+direction_max = 359
+speed_min = 1
+speed_max = 5
+duration_min = 2.0
+duration_max = 8.0
+
 [Planet]
 number = 1
 buffer_object = 200
