Added reset_timer to Find The Middle Game #113 Fixed Find The Middle Spawning Ships in the Circle to Start #115

--- a/SBA_Serv/Tests/test_findthemiddle.cfg
+++ b/SBA_Serv/Tests/test_findthemiddle.cfg
@@ -2,7 +2,7 @@
 collisions = true
 
 [Server]
-disable_commands = WarpCommand,FireTorpedoCommand
+disable_commands = WarpCommand,FireTorpedoCommand,DeploySpaceMineCommand
 
 [Nebula]
 number = 0
@@ -24,4 +24,5 @@ reset_score_on_death = true
 objective_radii = 50, 150, 300
 objective_points = 5, 2, 1
 objective_time = 3
+reset_timer = false
 objective_velocity = 5
