--- a/SBA_Serv/basicgame_findthemiddle.cfg
+++ b/SBA_Serv/basicgame_findthemiddle.cfg
@@ -2,7 +2,7 @@
 collisions = false
 
 [Server]
-disable_commands = WarpCommand,FireTorpedoCommand,AllStopCommand
+disable_commands = WarpCommand,DeploySpaceMineCommand,FireTorpedoCommand,AllStopCommand
 
 [Nebula]
 number = 1
@@ -24,4 +24,5 @@ reset_score_on_death = false
 objective_radii = 50, 150, 300
 objective_points = 4, 2, 1
 objective_time = 3
+reset_timer = false
 objective_velocity = 5
