--- a/SBA_Serv/no_advanced_commands.cfg
+++ b/SBA_Serv/no_advanced_commands.cfg
@@ -1,2 +1,2 @@
 [Server]
-disable_commands = AllStopCommand,CloakCommand,FireTorpedoCommand,RaiseShieldsCommand,RepairCommand,WarpCommand
+disable_commands = AllStopCommand,CloakCommand,DeploySpaceMineCommand,FireTorpedoCommand,RaiseShieldsCommand,RepairCommand,WarpCommand
