Make Hungry Hungry Baubles a Basic Game (Resolves #118) Created Common 'BaubleGame' Base Class for Hungry Hungry Baubles and Bauble Hunt. Made Bauble Hunt and Discovery Quest use new BasicGame's getObjectiveLocation() instead of getHomeBasePosition().

--- a/SBA_Serv/Tests/test_baublehunt.cfg
+++ b/SBA_Serv/Tests/test_baublehunt.cfg
@@ -14,10 +14,7 @@ spawn_time_max = 6
 game = BaubleHunt
 secondary_victory_attr = totalcollected
 
-[BaubleHunt]
-ship_cargo_size = 5
-respawn_bauble_on_collect = true
-
+[BaubleGame]
 bauble_percent_blue = 0.6
 bauble_points_blue = 1
 
@@ -27,3 +24,6 @@ bauble_points_yellow = 3
 bauble_percent_red = 0.1
 bauble_points_red = 5
 
+[BaubleHunt]
+ship_cargo_size = 5
+respawn_bauble_on_collect = true
