--- a/SBA_Serv/Tests/test_hungryhungrybaubles.cfg
+++ b/SBA_Serv/Tests/test_hungryhungrybaubles.cfg
@@ -7,7 +7,16 @@ buffer_edge = 30
 game = HungryHungryBaubles
 points_lost_on_death = 4
 
-[HungryHungryBaubles]
+[BaubleGame]
 bauble_points_blue = 1
-bauble_points_gold = 3
+bauble_percent_blue = 0.8
+
+bauble_points_yellow = 3
+bauble_percent_yellow = 0.2
+
+bauble_points_red = 5
+bauble_percent_red = 0.0
+
+[HungryHungryBaubles]
 bauble_points_extra = 2
+assign_specific_bauble = true
