Resolve #120 - Allow any number of Bauble Types in Bauble Games Add Links to other Methods in RadarCommand docs.

--- a/SBA_Serv/game_baublehunt.cfg
+++ b/SBA_Serv/game_baublehunt.cfg
@@ -29,14 +29,8 @@ game = BaubleHunt
 secondary_victory_attr = totalcollected
 
 [BaubleGame]
-bauble_points_blue = 1
-bauble_percent_blue = 0.6
-
-bauble_points_yellow = 3
-bauble_percent_yellow = 0.2
-
-bauble_points_red = 5
-bauble_percent_red = 0.2
+bauble_points = 1, 3, 5
+bauble_percent = 0.6, 0.2, 0.2
 
 [BaubleHunt]
 ship_cargo_size = 5
