--- a/SBA_Serv/Tests/test_baublehunt.cfg
+++ b/SBA_Serv/Tests/test_baublehunt.cfg
@@ -15,14 +15,8 @@ game = BaubleHunt
 secondary_victory_attr = totalcollected
 
 [BaubleGame]
-bauble_percent_blue = 0.6
-bauble_points_blue = 1
-
-bauble_percent_yellow = 0.3
-bauble_points_yellow = 3
-
-bauble_percent_red = 0.1
-bauble_points_red = 5
+bauble_points = 1, 3, 5
+bauble_percent = 0.6, 0.3, 0.1
 
 [BaubleHunt]
 ship_cargo_size = 5
