--- a/SBA_Serv/Tests/test_hungryhungrybaubles.cfg
+++ b/SBA_Serv/Tests/test_hungryhungrybaubles.cfg
@@ -8,15 +8,10 @@ game = HungryHungryBaubles
 points_lost_on_death = 4
 
 [BaubleGame]
-bauble_points_blue = 1
-bauble_percent_blue = 0.8
-
-bauble_points_yellow = 3
-bauble_percent_yellow = 0.2
-
-bauble_points_red = 5
-bauble_percent_red = 0.0
+bauble_points = 1, 3, 5
+bauble_percent = 0.8, 0.2, 0.0
 
 [HungryHungryBaubles]
+bauble_extra_value = 3
 bauble_points_extra = 2
 assign_specific_bauble = true
