--- a/SBA_Serv/Tests/test_spawning.cfg
+++ b/SBA_Serv/Tests/test_spawning.cfg
@@ -20,3 +20,9 @@ spawn_time_num = 1
 spawn_time_min = 3
 spawn_time_max = 4
 spawn_keep_max = 2
+
+[BlackHole]
+number = 0
+spawn_time_num = 1
+spawn_time_min = 10
+spawn_time_max = 10
