Some base work started from aux request from #111. Dragons and Asteroids can have initial speed configured. Dragons are no longer 'Asteroids' (internal) Added Initial 'Dragons Lair' Config File

--- a/SBA_Serv/Tests/test_spawning2.cfg
+++ b/SBA_Serv/Tests/test_spawning2.cfg
@@ -13,3 +13,8 @@ spawn_keep_max = 6
 spawn_time_num = 1
 spawn_time_min = 1
 spawn_time_max = 3
+
+[Star]
+number = 0
+spawn_keep_min = 1
+spawn_keep_max = 1
