--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -37,11 +37,15 @@ disconnect_on_idle = true
 number = 2
 buffer_object = 60
 buffer_edge = 30
+move_speed_min = 5
+move_speed_max = 30
 
 [Dragon]
 number = 0
 buffer_object = 128
 buffer_edge = 16
+move_speed_min = 10
+move_speed_max = 15
 range_min=64
 range_max=160
 attack_speed_min = 8
