--- a/SBA_Serv/Tests/defaulttest.cfg
+++ b/SBA_Serv/Tests/defaulttest.cfg
@@ -33,11 +33,15 @@ disconnect_on_idle = true
 number = 0
 buffer_object = 60
 buffer_edge = 30
+move_speed_min = 5
+move_speed_max = 30
 
 [Dragon]
 number = 0
 buffer_object = 128
 buffer_edge = 16
+move_speed_min = 10
+move_speed_max = 15
 range_min=64
 range_max=160
 attack_speed_min = 8
@@ -85,6 +89,8 @@ crush_time = 5.0
 
 [Star]
 number = 0
+buffer_object = 250
+buffer_edge = 100
 range_min=96
 range_max=224
 pull_min=12
