Refactor Player Scoring to be on Player and not Game Resolve #126 Add General Ability for Point Scoring to Spawn Manager Fixes #117 Tracking Lowest Primary Score Modes Removed AsteroidMiner example (game still exists)

--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -39,6 +39,8 @@ buffer_object = 60
 buffer_edge = 30
 move_speed_min = 5
 move_speed_max = 30
+points_torpedo = 0
+points_ram = 0
 
 [Dragon]
 number = 0
@@ -56,6 +58,8 @@ attack_amount_min = 15
 attack_amount_max = 25
 health_min=300
 health_max=600
+points_torpedo = 0
+points_ram = 0
 
 [SpaceMine]
 number = 0
