--- a/SBA_Serv/Tests/test_asteroidminer.cfg
+++ b/SBA_Serv/Tests/test_asteroidminer.cfg
@@ -6,10 +6,5 @@ spawn_time_max = 10
 spawn_on_player_num = 1
 spawn_on_player_start = true
 spawn_on_player_respawn = false
-
-[Game]
-game = AsteroidMiner
-
-[AsteroidMiner]
 points_torpedo = 2
-points_ship = 1
+points_ram = 1
