--- a/SBA_Serv/basicgame_asteroid.cfg
+++ b/SBA_Serv/basicgame_asteroid.cfg
@@ -7,10 +7,5 @@ spawn_time_max = 20
 spawn_on_player_num = 1
 spawn_on_player_start = true
 spawn_on_player_respawn = false
-
-[Game]
-game = AsteroidMiner
-
-[AsteroidMiner]
 points_torpedo = 2
-points_ship = 1
+points_ram = 1
