--- a/SBA_Serv/basicgame_dragonslair.cfg
+++ b/SBA_Serv/basicgame_dragonslair.cfg
@@ -13,6 +13,8 @@ spawn_keep_min = 12
 spawn_keep_max = 12
 move_speed_min = 10
 move_speed_max = 50
+points_torpedo = 2
+points_ram = 0
 
 [Dragon]
 number = 6
@@ -26,6 +28,8 @@ attack_time_min = 0.5
 attack_time_max = 1.5
 attack_amount_min = 15
 attack_amount_max = 25
+points_torpedo = 8
+points_ram = 0
 
 [Game]
 game = Survivor
