First pass at updating MA Parser to Find ObjectId for #42

--- a/SpaceBattleArena.config
+++ b/SpaceBattleArena.config
@@ -35,12 +35,29 @@ message SBAEntry with
     override string ToString()
     {
         return Message;
-    }
+    }    
 }
+
+int get ObjectId(this SBAEntry msg)
+{
+    int s = msg.Message.IndexOf("#");
+
+    if (s > -1)
+    {
+        // TODO: Find end of Number
+        string ret = msg.Message.Segment(s+1, 3);
+    
+        return (ret as int);
+    }
+    
+    return -1;
+}
+
+//syntax FindObjectID = regex{#\d+};
 
 syntax CustomDateTimeFormat = year:regex{\d\d\d\d} "-" month:regex{\d\d} "-" day:regex{\d\d} " " hours:regex{\d\d} ":" minutes:regex{\d\d} ":" seconds:regex{\d\d} "," milliseconds:regex{\d\d\d} => ToDateTime(year + "-" + month + "-" + day + "T" + hours + ":" + minutes + ":" + seconds + "." + milliseconds, DateTimeStyles.None);
 
-DateTime get customDateTime(this SBAEntry msg) with EntryFieldInfo {IsTimestamp = true, IsLocalTime = true }
+DateTime get customSBAPythonDateTime(this SBAEntry msg) with EntryFieldInfo {IsTimestamp = true, IsLocalTime = true }
 {
     optional DateTime theDateTime = CustomDateTimeFormat(msg.timestamp);
     
