The Bauble Weight Update (TBWU) * Baubles now can be weighted * Bauble Visual Size enlarged with weight * Bauble Hunt updated to respect weights for cargo capacity * HungryHungryBaubles uneffected * Have ability to tweak weights based on values * Effectively pre-work for adding new Game #26

--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -121,6 +121,10 @@ types=[1,2,3]
 buffer_exit_object = 128
 buffer_exit_edge = 64
 
+[BaubleGame]
+bauble_weights = 1
+bauble_weight_percent = 1.0
+
 [Game]
 game = Basic
 auto_start = true
