--- a/SBA_Serv/Tests/test_baublehunt_weights.cfg
+++ b/SBA_Serv/Tests/test_baublehunt_weights.cfg
@@ -3,12 +3,9 @@ number = 0
 buffer_object = 80
 buffer_edge = 30
 spawn_keep_max = 48
-spawn_on_player_num = 1
+spawn_on_player_num = 0
 spawn_on_player_start = true
 spawn_on_player_respawn = false
-spawn_time_num = 1
-spawn_time_min = 5
-spawn_time_max = 6
 
 [Game]
 game = BaubleHunt
@@ -18,8 +15,8 @@ secondary_victory_attr = totalcollected
 bauble_points = 1, 3, 5
 bauble_percent = 0.6, 0.3, 0.1
 bauble_invert_ratio_percent = 0.0, 0.0, 0.0
-bauble_weights = 1
-bauble_weight_percent = 1.0
+bauble_weights = 1, 3
+bauble_weight_percent = 0.5, 0.5
 
 [BaubleHunt]
 ship_cargo_size = 5
