--- a/SBA_Serv/Tests/test_hungryhungrybaubles2.cfg
+++ b/SBA_Serv/Tests/test_hungryhungrybaubles2.cfg
@@ -17,6 +17,9 @@ points_lost_on_death = 4
 [BaubleGame]
 bauble_points= 1, 3, 5
 bauble_percent = 0.8, 0.2, 0.0
+bauble_invert_ratio_percent = 0.0, 0.0, 0.0
+bauble_weights = 1
+bauble_weight_percent = 1.0
 
 [HungryHungryBaubles]
 bauble_extra_value = 3
