Adds to #26 - The Hunger Baubles Collect & Eject Commands for Bauble Management Adds ability to Limit Weapon Fire per Ship. The Hunger Baubles Game Info has booleans to tell you if you fired weapons. Add zoom when clicking tracked ship in GUI.

--- a/SBA_Serv/game_thehungerbaubles.cfg
+++ b/SBA_Serv/game_thehungerbaubles.cfg
@@ -43,3 +43,5 @@ respawn_bauble_on_collect = true
 cornucopia_radius = 200
 cornucopia_buffer_edge = 300
 cornucopia_buffer_object = 250
+collect_radius = 48
+limit_weapons = true
