Add Hunger Baubles Cornucopia Spawning and Hunting Bonuses

--- a/SBA_Serv/game_thehungerbaubles.cfg
+++ b/SBA_Serv/game_thehungerbaubles.cfg
@@ -1,11 +1,14 @@
 [Planet]
-number = 1
+number = 4
 
 [BlackHole]
 number = 1
 
+[WormHole]
+number = 3
+
 [Asteroid]
-number = 4
+number = 6
 spawn_keep_max = 10
 spawn_time_num = 1
 spawn_time_min = 20
@@ -40,8 +43,19 @@ bauble_weight_percent = 0.7, 0.2, 0.1
 [TheHungerBaubles]
 ship_cargo_size = 25
 respawn_bauble_on_collect = true
-cornucopia_radius = 200
+cornucopia_radius = 225
 cornucopia_buffer_edge = 300
 cornucopia_buffer_object = 250
 collect_radius = 48
 limit_weapons = true
+cornucopia_spawn_initial_num = 3
+cornucopia_spawn_time_num = 1
+cornucopia_spawn_time_min = 10
+cornucopia_spawn_time_max = 20
+cornucopia_spawn_points = 3, 5, 7
+cornucopia_spawn_dragon = true
+cornucopia_spawn_initial_dragons = 1
+asteroid_bauble_percent = 0.5
+asteroid_bauble_points = 1, 2, 3
+dragon_bauble_percent = 1.0
+dragon_bauble_points = 4, 5, 6
