Add Limiters to Spawning of Baubles and Dragons within the Cornucopia for The Hunger Baubles Make Dragons spawned by The Hunger Baubles game respect Spawn Manager alive_time properties.

--- a/SBA_Serv/game_thehungerbaubles.cfg
+++ b/SBA_Serv/game_thehungerbaubles.cfg
@@ -1,8 +1,14 @@
 [Planet]
-number = 4
+number = 3
+
+[Star]
+number = 1
 
 [BlackHole]
 number = 1
+
+[Nebula]
+number = 2
 
 [WormHole]
 number = 3
@@ -13,6 +19,15 @@ spawn_keep_max = 10
 spawn_time_num = 1
 spawn_time_min = 20
 spawn_time_max = 30
+
+[Dragon]
+number = 2
+spawn_keep_max = 4
+spawn_time_num = 1
+spawn_time_min = 10
+spawn_time_max = 20
+spawn_alive_time_min = 20
+spawn_alive_time_max = 40
 
 [Bauble]
 number = 10
@@ -49,12 +64,14 @@ cornucopia_buffer_object = 250
 collect_radius = 48
 limit_weapons = true
 cornucopia_spawn_initial_num = 3
+cornucopia_spawn_keep_max = 5
 cornucopia_spawn_time_num = 1
 cornucopia_spawn_time_min = 10
 cornucopia_spawn_time_max = 20
 cornucopia_spawn_points = 3, 5, 7
 cornucopia_spawn_dragon = true
 cornucopia_spawn_initial_dragons = 1
+cornucopia_spawn_max_dragons = 2
 asteroid_bauble_percent = 0.5
 asteroid_bauble_points = 1, 2, 3
 dragon_bauble_percent = 1.0
