Resolves #136 - *points_lost_on_death* can now be used for bestscore games

--- a/SBA_Serv/game_thehungerbaubles.cfg
+++ b/SBA_Serv/game_thehungerbaubles.cfg
@@ -45,6 +45,7 @@ spawn_time_max = 15
 [Game]
 game = TheHungerBaubles
 reset_score_on_death = true
+points_lost_on_death = 4
 primary_victory_attr = bestscore
 secondary_victory_attr = collected
 
