--- a/client_internal/tsconfig.json
+++ b/client_internal/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "es6",
         "module": "commonjs",
         "sourceMap": true,
-        "outDir": "out",
-        "rootDir": "."
+        "rootDir": ".",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
         //"watch": true
     },
     "exclude": [
