--- a/client_internal/.vscode/settings.json
+++ b/client_internal/.vscode/settings.json
@@ -5,6 +5,8 @@
         "**/.svn": true,
         "**/.hg": true,
         "**/.DS_Store": true,
+        "**/*.js.map": true,
+        "**/*.js": true,
         "out": true,
         "node_modules": true
     }
