--- a/client_internal/package.json
+++ b/client_internal/package.json
@@ -2,18 +2,28 @@
   "name": "node_midtier",
   "version": "1.0.0",
   "description": "SBA Midtier Client",
-  "main": "out/src/node_midtier.js",
+  "main": "src/node_midtier.js",
   "scripts": {
-    "start": "node out/src/node_midtier.js",
+    "start": "node src/node_midtier.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael A. Hawker",
   "license": "MIT",
   "dependencies": {
+    "@angular/cli": "^1.0.0-rc.0",
+    "@angular/common": "^2.4.8",
+    "@angular/core": "^2.4.8",
+    "@angular/forms": "^2.4.8",
+    "@angular/material": "^2.0.0-beta.2",
+    "@angular/platform-browser": "^2.4.8",
+    "@angular/platform-browser-dynamic": "^2.4.8",
     "http": "0.0.0",
     "http-server": "^0.9.0",
     "net": "^1.0.2",
-    "socket.io": "^1.7.3"
+    "rxjs": "^5.2.0",
+    "socket.io": "^1.7.3",
+    "systemjs": "^0.20.9",
+    "zone.js": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^7.0.5",
