Test: Three.js+Angular
Not commiting Image as won't be needed in future.

--- a/client_internal/tsconfig.json
+++ b/client_internal/tsconfig.json
@@ -2,10 +2,13 @@
     "compilerOptions": {
         "target": "es6",
         "module": "commonjs",
+        "moduleResolution": "node",
         "sourceMap": true,
         "rootDir": ".",
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "emitDecoratorMetadata": true,
+        //"noImplicitAny": true,
+        "suppressImplicitAnyIndexErrors": true
         //"watch": true
     },
     "exclude": [
