--- a/client_internal/package.json
+++ b/client_internal/package.json
@@ -22,11 +22,18 @@
     "net": "^1.0.2",
     "rxjs": "^5.2.0",
     "socket.io": "^1.7.3",
+    "stats.js": "^0.17.0",
     "systemjs": "^0.20.9",
+    "three": "^0.84.0",
+    "three-trackballcontrols": "0.0.5",
+    "tween.js": "^16.6.0",
     "zone.js": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^7.0.5",
+    "@types/stats.js": "^0.16.0",
+    "@types/three": "^0.83.4",
+    "@types/tween.js": "0.0.31",
     "typescript": "^2.2.1"
   }
 }
