Setup Separate Pipelines and rehook to browser
Need to work on object data format still.

--- a/client_internal/.vscode/launch.json
+++ b/client_internal/.vscode/launch.json
@@ -16,7 +16,7 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome",
+            "name": "Open Chrome",
             "url": "http://localhost/",
             "webRoot": "${workspaceRoot}/public",
             "userDataDir": "${workspaceRoot}/.vscode/chrome"
