--- a/client_internal/package.json
+++ b/client_internal/package.json
@@ -22,6 +22,7 @@
     "net": "^1.0.2",
     "rxjs": "^5.2.0",
     "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
     "stats.js": "^0.17.0",
     "systemjs": "^0.20.9",
     "three": "^0.84.0",
@@ -31,6 +32,8 @@
   },
   "devDependencies": {
     "@types/node": "^7.0.5",
+    "@types/socket.io": "^1.4.28",
+    "@types/socket.io-client": "^1.4.29",
     "@types/stats.js": "^0.16.0",
     "@types/three": "^0.83.4",
     "@types/tween.js": "0.0.31",
