--- a/SBA_Serv/game_discoveryquest.cfg
+++ b/SBA_Serv/game_discoveryquest.cfg
@@ -47,10 +47,12 @@ secondary_victory_attr = buffervalue
 secondary_victory_highest = true
 
 [DiscoveryQuest]
+establish_homebase = true
 scan_time = 3.5
 scan_range = 150
 ship_spawn_dist = 105
 disable_warp_in_nebula = true
+missions = true
 mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost,WormHole
 mission_num_min = 1
 mission_num_max = 3
