--- a/SBA_Serv/Tests/test_discovery_quest2.cfg
+++ b/SBA_Serv/Tests/test_discovery_quest2.cfg
@@ -10,10 +10,12 @@ secondary_victory_attr = buffervalue
 secondary_victory_highest = true
 
 [DiscoveryQuest]
+establish_homebase = true
 scan_time = 3.5
 scan_range = 150
 ship_spawn_dist = 105
 disable_warp_in_nebula = false
+missions = true
 mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost
 mission_num_min = 1
 mission_num_max = 3
