Add Constellation Decorations
No effect, but scanable for Discovery Quest points.

--- a/SBA_Serv/game_discoveryquest.cfg
+++ b/SBA_Serv/game_discoveryquest.cfg
@@ -35,6 +35,9 @@ spawn_time_max = 30
 [WormHole]
 number = 3
 
+[Constellation]
+number = 6
+
 [Outpost]
 number = 6
 buffer_object = 80
@@ -53,7 +56,7 @@ scan_range = 150
 ship_spawn_dist = 105
 disable_warp_in_nebula = true
 missions = true
-mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost,WormHole
+mission_objectives = Asteroid,Planet,BlackHole,Nebula,Star,Outpost,WormHole,Constellation
 mission_num_min = 1
 mission_num_max = 3
 mission_bonus_multiplier = 3.0
@@ -67,3 +70,4 @@ points_dragon = 6
 points_wormhole = 2
 points_spacemine = 8
 points_ship = 4
+points_constellation = 1
