--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -114,6 +114,11 @@ sizes=[(512,128),(512,144),(512,256),(384,144),(384,256)]
 pull_min=1750
 pull_max=2500
 
+[Constellation]
+number = 2
+buffer_object = 48
+buffer_edge = 64
+
 [WormHole]
 number = 0
 buffer_object = 200
