--- a/SBA_Serv/default.cfg
+++ b/SBA_Serv/default.cfg
@@ -114,6 +114,14 @@ sizes=[(512,128),(512,144),(512,256),(384,144),(384,256)]
 pull_min=1750
 pull_max=2500
 
+[Quasar]
+number = 0
+buffer_object = 128
+buffer_edge = 128
+sizes=[(512,384),(384,256)]
+pull_min=500
+pull_max=1250
+
 [Constellation]
 number = 2
 buffer_object = 48
