--- a/SBA_Serv/game_discoveryquest.cfg
+++ b/SBA_Serv/game_discoveryquest.cfg
@@ -12,7 +12,10 @@ number = 2
 number = 2
 
 [Nebula]
-number = 3
+number = 2
+
+[Quasar]
+number = 1
 
 [Asteroid]
 number = 10
@@ -65,6 +68,7 @@ points_asteroid = 2
 points_planet = 2
 points_blackhole = 3
 points_nebula = 1
+points_quasar = 5
 points_star = 3
 points_outpost = 2
 points_dragon = 6
