Fix DiscoveryQuest tests

--- a/SBA_Serv/Tests/test_discovery_quest.cfg
+++ b/SBA_Serv/Tests/test_discovery_quest.cfg
@@ -13,6 +13,7 @@ secondary_victory_highest = true
 establish_homebase = true
 scan_time = 3.5
 scan_range = 150
+scan_duration = 45
 ship_spawn_dist = 105
 disable_warp_in_nebula = true
 missions = true
